--- a/style.css
+++ b/style.css
@@ -134,6 +134,10 @@ table {
     border-spacing: 0;
 }
 
+body {
+    min-height: 100vh;
+}
+
 .container {
     display: flex;
     justify-content: center;
@@ -156,6 +160,33 @@ table {
 
 .weather-forecast {
     display: flex;
-    gap: 20px;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     margin: 10px;
+    border-radius: 8px;
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+    background-color: #a96909c7;
+    color: white;
+    padding: 30px;
+}
+
+.temp {
+    font-size: 1.5rem;
+    padding: 1rem;
+}
+
+.feels-like {
+    font-size: 1.5rem;
+    padding: 1rem
+}
+
+#cur-city {
+    font-size: 3rem;
+    font-weight: bold;
+    padding: 1rem;
+}
+
+.weather-icon {
+    padding-top: 10px;
 }
