--- a/style.css
+++ b/style.css
@@ -158,7 +158,7 @@ body {
     margin: 10px;
 }
 
-.weather-forecast {
+.weather-div {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -169,6 +169,8 @@ body {
     background-color: #a96909c7;
     color: white;
     padding: 30px;
+    flex-grow: 0;
+    flex-shrink: 0;
 }
 
 .temp {
@@ -189,4 +191,8 @@ body {
 
 .weather-icon {
     padding-top: 10px;
+}
+
+.condition {
+    font-size: 1.5rem;
 }
